update order history for client

--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1531,6 +1531,79 @@ input[type=number] {
 .notify__text {
     font-size: 14px !important;
 }
+.timeline__row {
+    display: flex;
+    position: relative;
+}
+
+.timeline__row_icon {
+    width: 30px;
+    margin-right: 20px;
+    z-index: 1;
+}
+
+.timeline__row_content {
+    width: calc(100% - 30px);
+    margin-bottom: 20px;
+}
+
+.timeline__row_content .badge {
+    margin-bottom: 10px;
+}
+
+.timeline__row:nth-last-child(1) .timeline__row_content {
+    border: none;
+    padding-bottom: 0;
+    margin-bottom: 10px;
+}
+
+.timeline__row:nth-last-child(1):before {
+    height: 0;
+}
+
+.timeline__row:before {
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    left: 15px;
+    background: #d5d5d5;
+}
+
+.timeline .timeline-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    background: #fff;
+    font-size: 1.3em;
+}
+
+.timeline .timeline-icon.success {
+    color: #4caf50;
+    border-color: #4caf50;
+}
+
+.timeline .timeline-icon.warning {
+    color: #ff9800;
+    border-color: #ff9800;
+}
+
+.timeline .timeline-icon.danger {
+    color: #f44336;
+    border-color: #f44336;
+}
+.order-history-phone {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+.order-history-phone ul {
+    list-style: disc;
+    width: fit-content;
+}
 @media screen and (max-width: 768px) {
     .product-media a.product-image {
         height: 30vh;
@@ -1540,6 +1613,9 @@ input[type=number] {
 @media screen and (min-width: 768px) {
     .voucher-title {
         width: 28%;
+    }
+    .order-history-phone {
+        display: none;
     }
     .voucher-selector:hover {
 
