--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1093,6 +1093,7 @@ input[type=number] {
     margin: auto;
     padding: 0;
     border-radius: 10px;
+    transition: all 0.3s ease-in-out;
 }
 
 .voucher-popup>div:first-child {
