--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1770,6 +1770,23 @@ input[type=number] {
     top: 50%;
     transform: translate(-50%, -50%);
 }
+.deal-products {
+    width: 300px;
+    height: calc(300px * 5 / 3);
+    position: relative;
+    background-color: #fff;
+    margin: auto;
+}
+.deal-products .product.product-7 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.deal-products .product.product-7 .product-media {
+    height: 65%;
+}
 
 @-webkit-keyframes shine {
     to {
