--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1619,11 +1619,11 @@ input[type=number] {
     width: fit-content;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .product-media a.product-image {
         height: 30vh;
     }
-}
+} */
 
 @media screen and (min-width: 768px) {
     .voucher-title {
