--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -6912,7 +6912,7 @@ p {
     border-radius: 0;
     white-space: normal;
     transition: all 0.3s;
-    border-radius: 15px;
+    border-radius: 0;
     border: 1px solid lightgrey;
 }
 
