--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1787,6 +1787,82 @@ input[type=number] {
 .deal-products .product.product-7 .product-media {
     height: 65%;
 }
+.drag-area {
+    margin: 5px;
+    height: 80px;
+    width: 80px;
+    border: 1px dashed red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.drag-area .icon svg {
+    width: 20px;
+    fill: red;
+}
+
+.drag-area .header {
+    font-size: 20px;
+    font-weight: 500;
+    color: #34495e;
+}
+
+.drag-area .support {
+    font-size: 12px;
+    color: red;
+    margin: 5px 0 0px 0;
+    line-height: 1.2rem;
+}
+
+.drag-area .button {
+    font-size: 20px;
+    font-weight: 500;
+    color: #1683ff;
+    cursor: pointer;
+}
+
+.drag-area.active {
+    border: 2px solid #1683ff;
+}
+
+.drag-area img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.btn-border-dash {
+    border: 1px dashed rgb(190, 188, 188);
+    background: none;
+    font-size: 13px;
+    transition: all 0.2s ease-in;
+    line-height: 0.75rem;
+    padding: 0.8rem;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-border-dash:hover {
+    border-color: 1px dashed #ee4d2d;
+    background: #fff5f4;
+}
+.product-image-wrapper .image-wrapper {
+    height: 120px !important;
+    position: relative !important;
+    overflow: hidden !important;
+    margin-bottom: 3px;
+}
+.product-image-wrapper .image-wrapper img, .product-image-wrapper .image-wrapper video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+}
 @media screen and (max-width: 768px) {
     .deal-products .product.product-7 .product-media a.product-image {
         height: 100% !important;
