--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10866,9 +10866,9 @@ small.form-text {
 }
 
 @media screen and (min-width: 768px) {
-    .modal-dialog {
+    /* .modal-dialog {
         max-width: 575px;
-    }
+    } */
 }
 
 .alert {
