--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -10907,7 +10907,7 @@ small.form-text {
 
 @media screen and (min-width: 768px) {
     .modal-dialog {
-        max-width: 575px;
+        /* max-width: 575px; */
     }
 }
 
