--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1626,7 +1626,7 @@ input[type=number] {
 }
 
 @media screen and (max-width: 575px) {
-    .quickView-content .product-left .carousel-dot.active img {
+    .quickView-content .product-left .carousel-dot img {
         height: 100%;
         width: auto !important;
         max-width: none !important;
