--- a/public/assets/css/admin/app.css
+++ b/public/assets/css/admin/app.css
@@ -70,7 +70,7 @@ h3 {
     background-image: none !important;
 }
 
-.select2-selection.select2-selection--single {
+.select2-selection.select2-selection--single,.select2-selection.select2-selection--multiple {
     height: 40px;
     font-size: 13px;
     display: flex;
@@ -82,7 +82,7 @@ h3 {
     padding-left: 8px;
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow {
+.select2-container--default .select2-selection--single .select2-selection__arrow, .select2-container--default .select2-selection--multiple .select2-selection__arrow {
     top: auto;
 }
 
