update reply review

--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -13669,7 +13669,7 @@ button:focus {
     }
 
     .review .row {
-        flex-direction: column;
+        /* flex-direction: column; */
     }
 
     .details-filter-row .select-custom {
