update review table

--- a/public/assets/css/admin/app.css
+++ b/public/assets/css/admin/app.css
@@ -437,3 +437,6 @@ div.dataTables_processing>div:last-child>div {
 a[href="https://www.froala.com/wysiwyg-editor?k=u"] {
     display: none !important;
 }
+p:has(a[href="https://www.froala.com/wysiwyg-editor?pb=1"]) {
+    display: none !important;
+}
