--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1391,6 +1391,7 @@ input[type=number] {
 
     .add-to-wishlist-wrapper {
         margin-top: 0;
+        padding: 0 !important;
     }
 
     .desktop-cart-table {
