--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -1286,7 +1286,7 @@ input[type=number] {
 }
 
 #save-voucher-component-wrapper {
-    position: absolute;
+    position: fixed;
     right: 0;
     width: 100%;
     bottom: 0;
