--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -9564,7 +9564,7 @@ p {
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgb(98 92 92 / 25%);
     z-index: 1;
     opacity: 0;
     visibility: hidden;
