--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -7891,6 +7891,23 @@ p {
     background-color: #fff;
 }
 
+.product-label.out-of-stock-label {
+    position: absolute;
+    z-index: 2;
+    top: 2rem;
+    right: 2rem;
+    font-weight: 400;
+    font-size: 1.3rem;
+    line-height: 1.6rem;
+    letter-spacing: -0.01em;
+    padding: 0.5rem 0.9rem;
+    min-width: 45px;
+    text-align: center;
+    color: #333333;
+    background-color: #fff;
+    width: fit-content;
+}
+
 .product-label+.product-label {
     top: 5rem;
 }
@@ -11731,7 +11748,7 @@ button:focus {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     flex: 0 0 80.8%;
-    /* max-width: 80.8%; */
+    position: relative;
     overflow: hidden;
 }
 
